fix pre wrapping. Change default text glow in buttons to false

--- a/app/assets/stylesheets/_custom_variables.css.scss
+++ b/app/assets/stylesheets/_custom_variables.css.scss
@@ -5,7 +5,7 @@ $user-font-family-sans-serif: "Source Sans Pro";
 $btn-inset-option:       true;
 $btn-border-option:      true;
 $btn-radius-option:      true;
-$btn-text-shadow-option: true;
+$btn-text-shadow-option: false;
 $btn-transition-option:  true;
 $btn-hover-bg-option:    true;
 
